# bbdl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bbdl/: __init__.py  assets.py  client.py  exceptions.py  helper.py  mappings.py  options.py  parser.py  request.py  sftp.py
src/bbdl/assets/: fields.csv
tests/: capture_fixtures.py  config.py  endtoend.py  test_ftp.py  test_options.py  test_parser.py  test_request.py
tests/fixtures/: fprp00.out  fprp00.req  server.py  test.sh
tests/fixtures/samples/comprehensive/: response_bonds.out  response_converts.out  response_equity.out
tests/fixtures/samples/current/: request.req  response.out
tests/fixtures/samples/historical_multi/: request.req  response.out
tests/fixtures/samples/historical_single/: request.req  response.out
