[tool.poetry]
name = "bbdl"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

more-itertools = "*"

libb-ftp = { git = "https://github.com/bissli/libb-ftp", rev = "master" }
libb-log = { git = "https://github.com/bissli/libb-log", optional = true, rev = "master" }

pytest = { version = "*", optional = true }
asserts = { version = "*", optional = true }
docker = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true, rev = "master" }

[tool.poetry.extras]
test = [
  "pdbpp",
  "pytest",
  "asserts",
  "libb-log",
  "docker",
  "pytest-mock",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
