[tool.poetry]
name = "bbdl"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

more-itertools = "*"

libb-ftp = { git = "https://github.com/bissli/libb-ftp" }
libb-log = { git = "https://github.com/bissli/libb-log", optional = true }

pytest = { version = "*", optional = true }
asserts = { version = "*", optional = true }
docker = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
wrapt = { version = '*', optional = true }

[tool.poetry.extras]
test = [
  "pytest",
  "asserts",
  "libb-log",
  "docker",
  "pytest-mock",
  "wrapt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
